--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,15 @@
 markdown: kramdown
 remote_theme: just-the-docs/just-the-docs
 
+# Site settings
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.github_repo }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.
+title: Quantitative Trading
+description: A brief of my study about quantitative trading
+baseurl: "/" # the subpath of your site, e.g. /blog
+url: "https://chenkaiju.github.io/quantitative_trading/" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Aux links for the upper right navigation
 aux_links:
